--- a/Marker_Cluster.html
+++ b/Marker_Cluster.html
@@ -66,8 +66,20 @@
 						</div>
 					</div>
 				</div>
-			</div> <!-- row map -->
-
+      </div> <!-- row map -->
+      
+      <div class="row m-b-1">  <!-- row plot1 -->
+				<div class="col-lg-6">
+					<div class="card shadow">
+            <h4 class="card-header">Most Common Words</h4>
+            <p>These are the most common words and phrases used in the violation types and comments.</p>
+						<div class="card-block">
+              <img src="all_words_wordcloud.png" id="wordcloud" alt="All_Words">
+						</div>
+					</div>
+				</div> 
+      </div> <!-- row plot1 -->
+    
 			<div class="row m-b-1">  <!-- row plot1 -->
 				<div class="col-lg-6">
 					<div class="card shadow">
